# todo_fullstack_project

./: .env  API.md  ARQUITECTURA.md  README.md
.github/workflows/: ci.yml
backend/: .env  Dockerfile  README.md  pyproject.toml  requirements.txt  todos.db
backend/app/: main.py
backend/app/db/: session.py
backend/app/models/: todo.py
backend/app/routers/: todos.py
backend/app/schemas/: todo.py
frontend/: .env  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: TodoItem.css  TodoItem.jsx
frontend/src/pages/: Todos.css  Todos.jsx
frontend/src/services/: api.js
